# geo

./: CMakeLists.txt  allpair.cpp  contour.cpp  nbyn.cpp
include/: graph.hpp
res/: config.ini  contour.ini  dup_config.ini  motor_contour.ini  motor_net3_config.ini  net3_config.ini  quad_train_contour.ini  quad_train_net3_config.ini  shoe_net3_config.ini
res/h3d/: net3_config.ini
res/pascal/: net3_config.ini
res/quad/: airplane_contour.ini  airplane_net3_config.ini  car_contour.ini  car_net3_config.ini  face_contour.ini  face_net3_config.ini  motorbike_contour.ini  motorbike_net3_config.ini
